--- a/consent.html
+++ b/consent.html
@@ -15,7 +15,7 @@
          
            //Update these parameters on your needs
            gtag('set', 'url_passthrough', true);
-           gtag('set', 'ads_data_redaction', true);
+           gtag('set', 'ads_data_redaction', false);
            
            //Checks if cookies exist and calls the default or update command accordingly
          if(document.cookie.indexOf("_cookieconsent=") === -1){
