--- a/consent.html
+++ b/consent.html
@@ -19,7 +19,7 @@
            
            //Checks if cookies exist and calls the default or update command accordingly
          if(document.cookie.indexOf("_cookieconsent=") === -1){
-             gtag('consent', 'default', {
+             gtag('consent', 'update', {
                	'ad_storage': 'denied',
                	'analytics_storage': 'denied',
                	'wait_for_update': 500});
